--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ node_js: stable
 # 只监听 source 分支的改动
 branches:
   only:
-  - source
+    - source
 
 # 缓存依赖，节省持续集成时间
 cache:
@@ -12,17 +12,11 @@ cache:
     - node_modules
 
 install:
-    - npm install
+  - npm install
 
 script:
-    - hexo clean
-    - hexo g
+  - hexo clean
+  - hexo g
 
-deploy:
-  local_dir: ./public
-  provider: pages
-  skip_cleanup: true
-  github_token: $token 
-  keep_history: true
-  on:
-    branch: master
+after_script:
+  - ./deploy.sh
