尝试修复图片问题

--- a/themes/indigo/_config.yml
+++ b/themes/indigo/_config.yml
@@ -16,7 +16,7 @@ menu:
   tags:
     url: /tags
   th-list:
-    text: Categories
+    text: 分类
     url: /categories
   github:
     url: https://github.com/cjc7373
