--- a/config.toml
+++ b/config.toml
@@ -2,6 +2,7 @@ baseURL = 'https://blog.coherence.codes/'
 languageCode = 'zh-cn'
 DefaultContentLanguage = "zh"
 title = "Coherence's Blog"
+copyright = "Coherence. 本站遵循 CC BY-NC-SA 4.0 协议"
 theme = "diary"
 
 [[menu.main]]
