--- a/config.toml
+++ b/config.toml
@@ -5,6 +5,11 @@ title = "Coherence's Blog"
 copyright = "Coherence. 本站遵循 CC BY-NC-SA 4.0 协议"
 theme = "diary"
 
+[sitemap]
+  changeFreq = ''
+  filename = 'sitemap.xml'
+  priority = -1
+
 [[menu.main]]
 url = "/categories"
 name = "分类"
