--- a/config.toml
+++ b/config.toml
@@ -11,9 +11,9 @@ theme = "diary"
   priority = -1
 
 [[menu.main]]
-url = "/categories"
-name = "分类"
-weight = 3
+url = "/posts"
+name = "存档"
+weight = 1
 
 [[menu.main]]
 url = "/tags"
@@ -21,19 +21,24 @@ name = "标签"
 weight = 2
 
 [[menu.main]]
-url = "/posts"
-name = "存档"
-weight = 1
+url = "/categories"
+name = "分类"
+weight = 3
+
+[[menu.main]]
+url = "/friends"
+name = "友链"
+weight = 4
 
 [[menu.main]]
 url = "/about"
 name = "关于"
-weight = 4
+weight = 5
 
 [[menu.main]]
 url = "/index.xml"
 name = "RSS Feed"
-weight = 5
+weight = 6
 
 [params]
 plausibleAnalyticsServer = "https://analytics.coherence.space"
